--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 .App-header {
   margin-top: 50px;
-  border: 1px solid blue;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,4 +19,13 @@
 .App-header span {
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.div-line {
+  height: 40px;
+  width: 300px;
+  border: 0.5px solid gray;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
 }
